Fixed pom.xml hopefully

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,6 +40,9 @@
     </dependency>
   </dependencies>
   <build>
+    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+    <outputDirectory>${basedir}/target/classes</outputDirectory>
+    <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
